# bc_etl_sandbox

./: pyproject.toml
etl_sandbox/: .gitignore
etl_sandbox/scripts/: event_timeliness.py  events_fact_table.py  main.py  scrap_sess_fact_table.py  scraping_sessions.py  search_efficiency.py  search_engine.py  search_fact_table.py
